Fix nav links on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -150,6 +150,6 @@ button:disabled svg {
   }
 
   #navDropdown nav {
-
+    white-space: nowrap;
   }
 }
